--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>Contact - La Chouette Agence - Entreprise webdesign Lyon</title>
 
     
 <!-- Analytics -->
