--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Contactez nous. La Chouette Agence est une entreprise de webdesign basée à Lyon. Nous pouvons vous accompagner dans tous vos projets de design.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
