--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
-				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -84,7 +82,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="texte : la chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet." src="img/title.png" />
+				<h2 class="mg-md text-center">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<!--<img alt="texte : la chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet." src="img/title.png" />-->
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -154,7 +153,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="citation : nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2.png" />
+				<h2 class="mg-md text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+				<!--<img alt="citation : nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2.png" />-->
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -245,7 +245,6 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span>Instagram</a>
 						</div>
 					</div>
-					<!--<div class="keywords" style="color:#F3976C;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
